--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>NgGithubSearch</title>
+  <link rel="stylesheet" href="assets/bootstrap.css">
+  <link rel="stylesheet" href="styles.css">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
